--- a/src/components/landingPage.css
+++ b/src/components/landingPage.css
@@ -23,6 +23,7 @@
     color: white; /* Adjust text color */
     text-align: center;
     font-weight: 500;
+    font-size: 1.5rem;
 }
 .logo {
     display: inline-block;
