--- a/src/components/services.css
+++ b/src/components/services.css
@@ -1,30 +1,18 @@
 /* Services Section Styling */
 .services {
     padding: 60px 20px;
-    text-align: center;
     background-color: #f4f4f4;
 }
 
 .services-title {
-    font-size: 2rem;
+    font-weight: bold;
+    font-size: 3rem;
     margin-bottom: 40px;
+    margin-top: 40px;
+text-align: center;
     color: #333;
 }
 
-.services-container {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    flex-wrap: nowrap; /* Prevent wrapping */
-}
-
-.service {
-    flex: 1 1 30%; /* Ensure the items stay at 30% of the width, side by side */
-    min-width: 250px; /* Prevent shrinking too small */
-    padding: 20px;
-    text-align: left;
-    position: relative;
-}
 
 .service h3 {
     font-size: 1.5rem;
