--- a/src/components/header.css
+++ b/src/components/header.css
@@ -34,7 +34,7 @@
     margin-top: 70px;
     padding: 10px;
     height: 80px; 
-    background-color: #141a17 ;
+    background-color: #000000 ;
     gap: 55%;
 }
 
