--- a/src/components/contactUs.css
+++ b/src/components/contactUs.css
@@ -6,9 +6,15 @@
 }
 
 .contact-title {
-    font-size: 2rem;
-    color: #333;
-    margin-bottom: 20px;
+   
+    font-weight: bold;
+    font-size: 3rem;
+    margin-bottom: 40px;
+    margin-top: 40px;
+    text-align: center;
+    color: #000000;
+    
+    
 }
 
 
