--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,66 +1,45 @@
-/* Common Header Style */
-header {
-  width: 100%;
-  left: 0;
-  z-index: 1000;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-}
-
 /* Header1 */
 .header1 {
   position: fixed;
   top: 0;
   background-color: #ffffff;
-  height: 80px; /* Height for header1 */
+  height: 80px; /* Match height with header2 */
   display: flex;
-  justify-content: space-between; /* Ensures space between items */
+  justify-content: space-between;
   align-items: center;
   padding: 0 20px;
-  width: 100%; /* Ensures full width */
+  width: 100%;
   z-index: 10;
 }
 
 /* Header2 */
 .header2 {
   position: fixed;
-  top: 80px; /* Ensures header2 appears directly below header1 */
+  top: 80px;
   background-color: #000000;
-  height: 80px; /* Match the height of header1 */
+  height: 80px;
   display: flex;
-  justify-content: space-between; /* Ensures space between items */
+  justify-content: space-between;
   align-items: center;
   color: white;
   padding: 0 20px;
-  width: 100%; /* Ensures full width */
+  width: 100%;
   z-index: 9;
 }
 
-/* Top navigation */
-.top-nav {
+/* Logo Container */
+.logo-container {
   display: flex;
-  flex-direction: row;
   align-items: center;
-  justify-content: flex-end; /* Align the navigation links to the right */
-  width: 100%;
+  justify-content: flex-start;
+  height: 100%;
+}
+
+.header2 img {
+  height: 40px;
 }
 
 
-
-/* Make sure the logo in header2 is properly aligned */
-.header2 .logo-container {
-  display: flex;
-  align-items: center; /* Vertically center the logo */
-  justify-content: flex-start; /* Ensure the logo stays on the left */
-  height: 100%; /* Use full height of the header */
-}
-
-.menu {
-  display: flex;
-  flex-direction: row;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
 
 .menu > li {
   margin: 0 1rem;
@@ -69,6 +48,7 @@ header {
 .menu > li a {
   color: white;
   text-decoration: none;
+  font-size: 1rem;
 }
 
 .menu > li a:hover {
@@ -76,93 +56,39 @@ header {
 }
 
 
-.menu-button-container {
-  display: none;
-  height: 100%;
-  width: 30px;
-  cursor: pointer;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.mobile-menu ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
-#menu-toggle {
-  display: none;
+.mobile-menu ul li {
+  padding: 1rem;
+  text-align: center;
 }
 
-.menu-button,
-.menu-button::before,
-.menu-button::after {
+.mobile-menu ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 1rem;
+}
+
+.mobile-menu ul li a:hover {
+  text-decoration: underline;
+}
+
+/* Show Mobile Menu when toggled */
+.mobile-menu.block {
   display: block;
-  background-color: #fff;
-  position: absolute;
-  height: 4px;
-  width: 30px;
-  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
-  border-radius: 2px;
 }
 
-.menu-button::before {
-  content: '';
-  margin-top: -8px;
-}
-
-.menu-button::after {
-  content: '';
-  margin-top: 8px;
-}
-
-#menu-toggle:checked + .menu-button-container .menu-button::before {
-  margin-top: 0px;
-  transform: rotate(405deg);
-}
-
-#menu-toggle:checked + .menu-button-container .menu-button {
-  background: rgba(255, 255, 255, 0);
-}
-
-#menu-toggle:checked + .menu-button-container .menu-button::after {
-  margin-top: 0px;
-  transform: rotate(-405deg);
-}
-
-@media (max-width: 700px) {
-  .menu-button-container {
-      display: flex;
+/* Ensure Flex for Menu on Desktop */
+@media (max-width: 768px) {
+  .top-nav {
+    display: none; /* Hide the top-nav on mobile */
   }
-  .menu {
-      position: absolute;
-      top: 0;
-      margin-top: 50px;
-      left: 0;
-      flex-direction: column;
-      width: 100%;
-      justify-content: center;
-      align-items: center;
-  }
-  #menu-toggle ~ .menu li {
-      height: 0;
-      margin: 0;
-      padding: 0;
-      border: 0;
-      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-  }
-  #menu-toggle:checked ~ .menu li {
-      border: 1px solid #333;
-      height: 2.5em;
-      padding: 0.5em;
-      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-  }
-  .menu > li {
-      display: flex;
-      justify-content: center;
-      margin: 0;
-      padding: 0.5em 0;
-      width: 100%;
-      color: white;
-      background-color: #222;
-  }
-  .menu > li:not(:last-child) {
-      border-bottom: 1px solid #444;
+
+  .mobile-menu {
+    display: block;
   }
 }
